# assessment-technical-py-scenario1

./: Issue.md  README.md  alembic.ini  pyproject.toml  run.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  init-db.sh  run-migrations.sh
agent_discovery/: __init__.py  main.py
agent_discovery/api/: __init__.py
agent_discovery/api/agents/: __init__.py
agent_discovery/api/agents/queries/: __init__.py
agent_discovery/db/: __init__.py  agent_repository.py  db.py
agent_discovery/matching/: __init__.py  engine.py
agent_discovery/static/: index.html  query.html
agent_discovery/utils/: __init__.py  logging.py
alembic/: env.py
alembic/versions/: 001_create_agents_table.py  002_create_match_history_table.py  003_seed_agents_table.py
