[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-discovery-api"
version = "0.1.0"
description = "Agent Discovery API - Python Version"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "psycopg2-binary>=2.9.1",
    "python-dotenv>=0.19.0",
    "pydantic==2.4.2",
    "alembic>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.5b2",
    "isort>=5.9.1",
    "flake8>=3.9.2",
]

[tool.setuptools]
packages = ["agent_discovery"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
